--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       <div class="header__wrapper">
         <div class="logo">
           <h1 class="logo__title"><span>Mamma</span>Mia!</h1>
+          <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
           <a href="#order">Order</a>
@@ -59,6 +60,119 @@
       </div>
     </div>
   </header>
+
+  <div id="pages">
+    <section id="home">
+      <div class="links container">
+        <div class="part">
+          <a href="#order">
+            <img src="images/assets/pizza-1.jpg" alt="Order">
+            <h1>Order online</h1>
+            <h3>Delicious food delivered to your door</h3>
+          </a>
+        </div>
+        <div class="part">
+          <a href="#booking">
+            <img src="images/assets/pizza-2.jpg" alt="Booking">
+            <h1>Book a table</h1>
+            <h3>Delicious food in our restaurant</h3>
+          </a>
+        </div>
+        <div class="hours">
+          <h1>Opening hours</h1>
+          <h3>MON-SUN, 12PM - 1AM</h3>
+        </div>
+      </div>
+      <div class="carousel container">
+        <div class="carousel-comment">
+          <div class="comment-image">
+            <img src="images/assets/pizza-3.jpg" alt="Image">
+          </div>
+          <div class="comment-text">
+            <h2>A great experience!</h2>
+            <p>Duis eu mi eleifend, tincidunt ipsum sed, mollis purus. Nunc et eros a libero placerat vehicula in et urna.</p>
+          </div>
+        </div>
+        <div class="carousel-comment">
+          <div class="comment-image">
+            <img src="images/assets/pizza-4.jpg" alt="Image">
+          </div>
+          <div class="comment-text">
+            <h2>Amazing service!</h2>
+            <p>Praesent ac enim urna. Phasellus ultricies libero ac gravida mattis. Nam pellentesque gravida lacinia. Nulla tempor arcu sed sem faucibus, ac molestie tellus maximus. Nulla dapibus odio nec dui tempus, at sodales turpis eleifend.</p>
+          </div>
+        </div>
+        <div class="carousel-comment comment-active">
+          <div class="comment-image">
+            <img src="images/assets/pizza-5.jpg" alt="Image">
+          </div>
+          <div class="comment-text">
+            <h2>Delicious!</h2>
+            <p>Donec posuere blandit libero, sit amet dapibus nunc venenatis aliquam. Phasellus porttitor purus ut dui tempus accumsan. Suspendisse aliquam fringilla elit non tristique.</p>
+          </div>
+        </div>
+        <div>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot active"></span>
+        </div>
+      </div>
+      <div class="gallery container">
+        <div class="row">
+          <div>
+            <img src="images/assets/pizza-4.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div>
+            <img src="images/assets/pizza-5.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div>
+            <img src="images/assets/pizza-6.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div>
+            <img src="images/assets/pizza-7.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div>
+            <img src="images/assets/pizza-8.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+          <div>
+            <img src="images/assets/pizza-9.jpg" alt="gallery-image">
+            <span>
+              <i class="fas fa-heart"></i>
+              <i class="fas fa-share-alt"></i>
+            </span>
+          </div>
+        </div>
+        <a href="#">Follow us on Instagram</a>
+      </div>
+    </section>
+
+    <section id="order">
+      <div id="product-list" class="product-list container"></div>
+    </section>
+    <section id="booking">
+      <div class="booking-wrapper container"></div>
+    </section>
+  </div>
 
   <div id="pages">
     <section id="order">
